[gd_scene load_steps=27 format=3 uid="uid://deo6a22xw7hyb"]

[ext_resource type="Script" uid="uid://r4esfi5mnbp1" path="res://StarMenu/star_menu.gd" id="1_bawdr"]
[ext_resource type="Script" uid="uid://dpwfiplimgruh" path="res://StarMenu/star_map_view.gd" id="2_1sd4k"]
[ext_resource type="Resource" uid="uid://drp686mlyj1xk" path="res://StarMenu/alpha_system.tres" id="3_703u0"]
[ext_resource type="Script" uid="uid://d2r6ivcpppmcj" path="res://StarMenu/system_view.gd" id="3_suaud"]
[ext_resource type="Texture2D" uid="uid://csf5na4xj4be1" path="res://assets/background1.png" id="4_703u0"]
[ext_resource type="Script" uid="uid://8321q6jwtd6u" path="res://StarMenu/planet_view.gd" id="4_k4xme"]
[ext_resource type="Script" uid="uid://dvynj4ved0mam" path="res://StarMenu/perks_view.gd" id="5_q7svf"]
[ext_resource type="Texture2D" uid="uid://bsfbknwn0s0a3" path="res://scenes/front.png" id="8_uo6vd"]
[ext_resource type="PackedScene" uid="uid://dwbhdnwgxpion" path="res://StarMenu/star_sytem.tscn" id="9_703u0"]
[ext_resource type="Resource" uid="uid://cpe1um4m0rghu" path="res://StarMenu/beta_system.tres" id="10_8ydva"]
[ext_resource type="Shader" uid="uid://dagqdobs0igw0" path="res://shaders/star_one.gdshader" id="10_sw5rk"]
[ext_resource type="Resource" uid="uid://dsluqqp01vhbp" path="res://StarMenu/gamma_system.tres" id="11_7xwej"]
[ext_resource type="PackedScene" uid="uid://dsdstadgt0cya" path="res://StarMenu/line_node.tscn" id="12_7xwej"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8ydva"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_0fbj8"]
sky_material = SubResource("ProceduralSkyMaterial_8ydva")

[sub_resource type="Environment" id="Environment_7xwej"]
background_mode = 2
background_energy_multiplier = 1.5
sky = SubResource("Sky_0fbj8")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fp76q"]
albedo_texture = ExtResource("8_uo6vd")
emission = Color(0.169245, 0.169245, 0.169245, 1)

[sub_resource type="QuadMesh" id="QuadMesh_sw5rk"]
material = SubResource("StandardMaterial3D_fp76q")
size = Vector2(1000, 1000)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_abc12"]
texture = ExtResource("4_703u0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tklnn"]
render_priority = 0
shader = ExtResource("10_sw5rk")
shader_parameter/time_scale = 0.019
shader_parameter/noise_scale = 10.0
shader_parameter/detail_scale = 5.0
shader_parameter/contrast = 1.0
shader_parameter/color_dark = Vector3(0.5, 0.2, 0)
shader_parameter/color_core = Vector3(0.2, 0.8, 0.2)
shader_parameter/color_hot = Vector3(1, 0.4, 0.2)
shader_parameter/emission_strength = 1.503
shader_parameter/corona_strength = 0.439
shader_parameter/swirl_strength = 0.067

[sub_resource type="SphereMesh" id="SphereMesh_uo6vd"]
material = SubResource("ShaderMaterial_tklnn")
radius = 2.0
height = 4.0

[sub_resource type="SphereMesh" id="SphereMesh_7xwej"]

[sub_resource type="SphereMesh" id="SphereMesh_sw5rk"]

[sub_resource type="SphereMesh" id="SphereMesh_tklnn"]

[sub_resource type="SphereMesh" id="SphereMesh_6rj7k"]

[sub_resource type="SphereMesh" id="SphereMesh_wlyw0"]

[node name="StarMenu" type="Node3D"]
script = ExtResource("1_bawdr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7xwej")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.036205, -0.0206527, -0.999131, -0.842254, -0.537471, 0.0416302, -0.537864, 0.843029, 0.00206436, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true

[node name="Starfield" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
mesh = SubResource("QuadMesh_sw5rk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 350)
near = 0.005

[node name="StarMapView" type="Node3D" parent="."]
script = ExtResource("2_1sd4k")

[node name="UI" type="Control" parent="StarMapView"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemInfoPanel" type="Panel" parent="StarMapView/UI"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 420.0
theme_override_styles/panel = SubResource("StyleBoxTexture_abc12")

[node name="InfoContainer" type="VBoxContainer" parent="StarMapView/UI/SystemInfoPanel"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemNameLabel" type="Label" parent="StarMapView/UI/SystemInfoPanel/InfoContainer"]
layout_mode = 2
text = "Select a system"

[node name="DifficultyLabel" type="Label" parent="StarMapView/UI/SystemInfoPanel/InfoContainer"]
layout_mode = 2
text = "Difficulty: -"

[node name="ProgressLabel" type="Label" parent="StarMapView/UI/SystemInfoPanel/InfoContainer"]
layout_mode = 2
text = "Progress: -"

[node name="DescriptionLabel" type="Label" parent="StarMapView/UI/SystemInfoPanel/InfoContainer"]
layout_mode = 2
text = "Description: -"

[node name="LockedLabel" type="Label" parent="StarMapView/UI/SystemInfoPanel/InfoContainer"]
layout_mode = 2
text = "Locked: -"

[node name="SystemView" type="Node3D" parent="."]
script = ExtResource("3_suaud")

[node name="UI" type="Control" parent="SystemView"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlanetInfoPanel" type="Panel" parent="SystemView/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InfoContainer" type="VBoxContainer" parent="SystemView/UI/PlanetInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlanetNameLabel" type="Label" parent="SystemView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="SystemView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="SystemView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="LockedLabel" type="Label" parent="SystemView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="PlanetView" type="Node3D" parent="."]
script = ExtResource("4_k4xme")

[node name="UI" type="Control" parent="PlanetView"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlanetInfoPanel" type="Panel" parent="PlanetView/UI"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2

[node name="InfoContainer" type="VBoxContainer" parent="PlanetView/UI/PlanetInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlanetNameLabel" type="Label" parent="PlanetView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PlanetView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="EnvironmentLabel" type="Label" parent="PlanetView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="PlanetView/UI/PlanetInfoPanel/InfoContainer"]
layout_mode = 2

[node name="StartLevelButton" type="Button" parent="PlanetView/UI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="PerksButton" type="Button" parent="PlanetView/UI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="PerksView" type="Node3D" parent="."]
script = ExtResource("5_q7svf")

[node name="UI" type="Control" parent="PerksView"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StarSystems" type="Node3D" parent="."]

[node name="AlphaSystem" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -362.18, 169.69, 0)
system_resource = ExtResource("3_703u0")
star_mesh = SubResource("SphereMesh_uo6vd")

[node name="BetaSystem" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -204.225, -18.3387, 0)
system_resource = ExtResource("10_8ydva")
star_mesh = SubResource("SphereMesh_7xwej")

[node name="GammaSystem" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -114.279, 120.443, 0)
system_resource = ExtResource("11_7xwej")
star_mesh = SubResource("SphereMesh_sw5rk")

[node name="AlphaSystem2" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.3685, 22.6653, 3.05176e-05)
system_resource = ExtResource("3_703u0")
star_mesh = SubResource("SphereMesh_tklnn")

[node name="BetaSystem2" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 125.587, -165.363, 3.05176e-05)
system_resource = ExtResource("10_8ydva")
star_mesh = SubResource("SphereMesh_6rj7k")

[node name="GammaSystem2" parent="StarSystems" instance=ExtResource("9_703u0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 215.533, -26.5817, 3.05176e-05)
system_resource = ExtResource("11_7xwej")
star_mesh = SubResource("SphereMesh_wlyw0")

[node name="Planets" type="Node3D" parent="."]

[node name="ConstellationLines" type="Node3D" parent="."]

[node name="LineNode" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/AlphaSystem")
end_node = NodePath("../../StarSystems/BetaSystem")

[node name="LineNode2" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/AlphaSystem")
end_node = NodePath("../../StarSystems/GammaSystem")

[node name="LineNode3" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/BetaSystem")
end_node = NodePath("../../StarSystems/AlphaSystem2")

[node name="LineNode4" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/GammaSystem")
end_node = NodePath("../../StarSystems/AlphaSystem2")

[node name="LineNode5" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/AlphaSystem2")
end_node = NodePath("../../StarSystems/BetaSystem2")

[node name="LineNode6" parent="ConstellationLines" instance=ExtResource("12_7xwej")]
start_node = NodePath("../../StarSystems/AlphaSystem2")
end_node = NodePath("../../StarSystems/GammaSystem2")
