[gd_scene load_steps=2 format=3 uid="uid://du1343o1l0m7q"]

[ext_resource type="Script" uid="uid://bfwetdetm7qcq" path="res://StarMenu/perks_view.gd" id="1_54lqj"]

[node name="PerksView" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_54lqj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1132.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Background" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="HboxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 16
alignment = 1

[node name="TopContainer" type="MarginContainer" parent="MarginContainer/HboxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/HboxContainer/TopContainer"]
custom_minimum_size = Vector2(128, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlanetLabel" type="Label" parent="MarginContainer/HboxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PlanetName"

[node name="MidContainer" type="HBoxContainer" parent="MarginContainer/HboxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HoverPanel" type="Panel" parent="MarginContainer/HboxContainer/MidContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HboxContainer/MidContainer/HoverPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PerkNameLabel" type="Label" parent="MarginContainer/HboxContainer/MidContainer/HoverPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 2

[node name="PerkDescLabel" type="Label" parent="MarginContainer/HboxContainer/MidContainer/HoverPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
autowrap_mode = 3

[node name="PerksGrid" type="GridContainer" parent="MarginContainer/HboxContainer/MidContainer"]
custom_minimum_size = Vector2(700, 700)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="Panel" type="Panel" parent="MarginContainer/HboxContainer/MidContainer/PerksGrid"]
custom_minimum_size = Vector2(700, 700)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PaperDollPanel" type="Panel" parent="MarginContainer/HboxContainer/MidContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_vertical = 4

[node name="DollLabel" type="Label" parent="MarginContainer/HboxContainer/MidContainer/PaperDollPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -11.5
offset_right = 47.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Paperdoll
PlaceHolder"
horizontal_alignment = 1

[node name="BottomContainer" type="MarginContainer" parent="MarginContainer/HboxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HboxContainer/BottomContainer"]
custom_minimum_size = Vector2(700, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="MarginContainer/HboxContainer/BottomContainer"]
custom_minimum_size = Vector2(700, 128)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="GoButton" type="Button" parent="MarginContainer/HboxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "DROP!"
